--- a/servicio.sesta.yml
+++ b/servicio.sesta.yml
@@ -19,3 +19,7 @@ servicio.catalogo:
          minAvailableServers: 1
          maxLoadPerServer: 0.8
          maxBlackOutServersPercentage: 0.6
+security: 
+  oauth2: 
+    resource:
+      user-info-uri: http://localhost:7777/user
