--- a/servicio.catalogo.yml
+++ b/servicio.catalogo.yml
@@ -2,7 +2,7 @@
 eureka: 
   client: 
     serviceUrl: 
-      defaultZone: "http://localhost:8761/eureka"
+      defaultZone: "http://172.17.0.4:8761/eureka"
       
   instance: 
     healthCheckUrlPath: "/healthCatalogo"
@@ -31,4 +31,4 @@ spring.jpa:
 security: 
   oauth2: 
     resource:
-      user-info-uri: http://localhost:7777/user
+      user-info-uri: http://172.17.0.3:7777/user
