--- a/servicio.catalogo.yml
+++ b/servicio.catalogo.yml
@@ -19,7 +19,7 @@ spring:
     name: servicio.catalogo
 
 spring.datasource:
-  url: "jdbc:mysql://localhost:3306/bdalmacen?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC"
+  url: "jdbc:mysql://172.17.0.6:3306/bdalmacen?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC"
   username: "root"
   password: "root"
   
